--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="container">
             <div class="breadcrumbs__inner">
               <ul class="breadcrumbs__list">
-                <li><a href="http://localhost:3000/">Home</a></li>
+                <li><a href="https://marketplace-mixitup-slider.netlify.app/">Home</a></li>
                 <li><span>Product Page</span></li>
               </ul>
             </div>
